--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,7 @@ body {
     flex-direction: column;
     height: 1px;
 }
+
+button {
+    @apply mt-4 w-32 px-4 py-2 bg-blue-500 text-white font-semibold rounded-lg shadow-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75;
+}
