--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,10 @@ body {
     height: 1px;
 }
 
-button {
+.sbutton {
+    @apply mt-2 w-24 px-4 py-2 bg-orange-500 text-white text-xs rounded-lg shadow-md hover:bg-orange-700 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75;
+}
+
+.pbutton {
     @apply mt-4 w-32 px-4 py-2 bg-blue-500 text-white font-semibold rounded-lg shadow-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75;
 }
