--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,7 @@ body {
     flex-direction: column;
     height: 1px;
 }
+
+.smallbutton {
+    @apply px-3 py-1 bg-gray-200 text-gray-500 text-sm min-w-24 rounded-md hover:bg-gray-300 disabled:bg-gray-100 disabled:cursor-not-allowed focus:outline-none focus:ring-2 focus:ring-indigo-300;
+}
