--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,7 @@ body {
     flex-direction: column;
     height: 1px;
 }
+
+button {
+    @apply bg-blue-500 text-white font-bold py-2 px-4 rounded;
+}
