--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,11 @@ body {
     flex-direction: column;
     height: 1px;
 }
+
+button {
+    @apply bg-blue-500 text-white font-bold py-2 px-4 rounded;
+}
+
+input {
+    @apply shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none ;
+}
