--- a/src/index.css
+++ b/src/index.css
@@ -18,9 +18,9 @@ body {
 }
 
 .smallbutton {
-    @apply px-3 py-1 bg-gray-200 text-gray-500 text-sm min-w-24 rounded-md hover:bg-gray-300 disabled:bg-gray-100 disabled:cursor-not-allowed focus:outline-none focus:ring-2 focus:ring-indigo-300;
+    @apply px-3 py-1 bg-gray-200 text-gray-500 text-sm min-w-24 rounded-md hover:bg-gray-300 disabled:bg-gray-100 disabled:cursor-not-allowed focus:outline-none focus:ring-2 focus:ring-indigo-300 select-none;
 }
 
 .largebutton {
-    @apply bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600
+    @apply bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 select-none;
 }
